--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,11 @@ body {
   top: 29px;
   position: relative;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .menu-list__portfolio-after::after {
+    top: 35px;
+  }
+}
 .menu-list__text-after::after {
   content: "";
   width: 49px;
