--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   margin-left: -30px;
+  margin-bottom: -30px;
   @media screen and (max-width: 767px) {
     display: flex;
     flex-wrap: wrap;
