--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -44,6 +44,9 @@
 .footer {
   text-align: center;
   padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
 }
 .footer-header {
   text-align: center;
