--- a/sass/components/_footer_form.scss
+++ b/sass/components/_footer_form.scss
@@ -102,8 +102,12 @@
   text-transform: uppercase;
   padding-bottom: 20px;
   color: var(--whiteone);
+
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
     justify-content: center;
+    margin-top: 60px;
+  }
+  @media screen and (min-width: 1200px) {
   }
 }
