--- a/sass/components/_mob_menu.scss
+++ b/sass/components/_mob_menu.scss
@@ -10,8 +10,16 @@
   padding-top: 48px;
   transition: opacity 800ms, visibility 800ms, transform 10ms;
   .container {
-    display: block;
+    display: flex;
+    overflow-y: auto;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+    align-items: flex-start;
   }
+}
+.top_menu {
+  width: 100%;
 }
 .mob__button {
   display: block;
@@ -31,7 +39,7 @@
 // .mob__icon {
 // }
 .mob__list {
-  margin-bottom: 302px;
+  // margin-bottom: 302px;
 }
 .mob__list-item {
   &:not(:last-child) {
