--- a/sass/components/_portfolio_projects.scss
+++ b/sass/components/_portfolio_projects.scss
@@ -20,13 +20,12 @@
 .portfolio-projects-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-  // margin-bottom: -30px;
 }
 .portfolio-projects-item {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  width: 100%;
+
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: calc(100% / 2 - 30px);
     margin-left: 30px;
