--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,11 +1,6 @@
 .logo-white {
   color: var(--whiteone);
 }
-.footer {
-  background: #2f303a;
-  padding-top: 60px;
-}
-
 .footer-map {
   font-weight: 400;
   font-size: 14px;
@@ -26,7 +21,7 @@
   text-align: center;
   margin-top: 8px;
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    text-align: start;
+    text-align: center;
   }
   @media screen and (min-width: 1200px) {
     text-align: start;
@@ -42,8 +37,12 @@
   margin-bottom: 0;
 }
 .footer {
+  background: #2f303a;
+  padding-top: 60px;
   text-align: center;
   padding-bottom: 60px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  }
   @media screen and (min-width: 1200px) {
     text-align: start;
   }
@@ -61,10 +60,11 @@
   padding-bottom: 20px;
   margin-top: 60px;
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    text-align: start;
+    margin-top: 0;
   }
   @media screen and (min-width: 1200px) {
     text-align: start;
+    margin-top: 0;
   }
 }
 .logo-footer {
