--- a/sass/components/_portfolio_buttons.scss
+++ b/sass/components/_portfolio_buttons.scss
@@ -22,17 +22,19 @@
   border: var(--whiteone);
   border-radius: 4px;
   padding: 6px 22px;
-  margin-bottom: 21px;
+
   transition-property: border, fill, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-bottom: 0;
-  }
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 0;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+    }
   }
 }
+
 .portfolio-rubrication-button:hover {
   background: var(--blueone);
   color: var(--whiteone);
@@ -42,6 +44,10 @@
 
 .portfolio-rubrication-item {
   margin-right: 8px;
+  margin-bottom: 27px;
+}
+.portfolio-rubrication-item:nth-last-child(-n + 2) {
+  margin-bottom: 0;
 }
 .portfolio-rubrication-button:focus {
   background: var(--blueone);
@@ -53,7 +59,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-bottom: 46px;
+  // margin-bottom: 46px;
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
     flex-direction: row;
