--- a/sass/components/_portfolio_projects.scss
+++ b/sass/components/_portfolio_projects.scss
@@ -20,6 +20,16 @@
 .portfolio-projects-list {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 46px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-left: -30px;
+    padding-top: 0px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: -30px;
+    padding-top: 0px;
+    margin-bottom: -30px;
+  }
 }
 .portfolio-projects-item {
   display: flex;
@@ -30,11 +40,17 @@
     width: calc(100% / 2 - 30px);
     margin-left: 30px;
     margin-bottom: 30px;
+    // .portfolio-projects-item:nth-last-child(-n + 3) {
+    //   margin-bottom: 0;
+    // }
   }
   @media screen and (min-width: 1200px) {
     width: calc(100% / 3 - 30px);
     margin-left: 30px;
     margin-bottom: 30px;
+    .portfolio-projects-item:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
 }
 .portfolio-projects-item:last-child {
@@ -50,9 +66,7 @@
   border-left: 1px solid #f0efef;
   border-right: 1px solid #f0efef;
 }
-.portfolio-projects-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
+
 .portfolio-projects-item:hover .project-top-text {
   transform: translateY(0%);
 }
